add results sections

--- a/paper.tex
+++ b/paper.tex
@@ -427,9 +427,7 @@ in $\hier^{-1} (\hier(a))$.  Hence, our sum decomposes into partial sums
 for the fibers of the points in the hierarchy which corresponds to a
 factorization of the characteristic polynomial.
 
-
-
-\section{Two component systems}
+\section{Stability and robustness analysis of multi-component systems}
 For two-component systems having $2 \times 2$ Jacobian matrices, the aforementioned stability criteria result in the conditions $T < 0$ and $D >
 0$ where $T$ and $D$ denote the trace and the determinant.
 
@@ -492,11 +490,21 @@ d & c
 \end{pmatrix} \textrm{stable } \right) = \frac{\int_{{{{a'c>bd \atop a' + c < 0} \atop ac>bd} \atop a+c<0} \atop H^5} da\,db\,dc\,dd\,da'\,1}{\int_{H^5} da\,db\,dc\,dd\,da'\,1}.
 \end{align*}
 
-The probability of \emph{a priori} stability and of stability to perturbations for all two component systems is given in Table \ref{tab:structstabmat}.
+The probability of \emph{a priori} stability and of stability to perturbations for all two component systems is given in Table \ref{tab:structstabmat}. Similarly, the analogous results for all three component systems is given in Table \ref{tab:structstabmat3}.
 
-\section{Three component systems}
+\section{Connectivity is correlated with robustness}
+\ref{fig:stab3x3} shows the probability of stability to perturbations for all three component systems as a function of connectivity.
 
-The probability of \emph{a priori} stability and of stability to perturbations for all three component systems is given in Table \ref{tab:structstabmat3}. \ref{fig:connectcycle3D3x3} shows the probability of stability to perturbations for all three component systems as a function of connectivity and number of cycles. \ref{fig:stab3x3} shows the probability of stability to perturbations for all three component systems as a function of connectivity. \ref{fig:cycle3x3} shows the probability of stability to perturbations for all three component systems as a function of the number of simple cycles (elementary circuits) of length greater than one in the corresponding directed graph \cite{Johnson1975}.
+\section{Cycle number is inversely correlated with robustness}
+\ref{fig:cycle3x3} shows the probability of stability to perturbations for all three component systems as a function of the number of simple cycles (elementary circuits) of length greater than one in the corresponding directed graph \cite{Johnson1975}.
+
+\section{Cycle number and connectivity classify robust systems}
+\ref{fig:connectcycle3D3x3} shows the probability of stability to perturbations for all three component systems as a function of connectivity and number of cycles.
+
+\section{Hierarchical systems are the most robust}
+\ref{fig:scc} shows systems with varying levels of hierarchy and modularity.
+
+\section{Discussion}
 
 \newpage
 
